--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "ecoassist-bradesco",
-  "homepage": "./",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
@@ -28,5 +26,6 @@
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.5"
-  }
+  },
+  "homepage": "."
 }
