--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecoassist-bradesco",
-  "homepage": "./",
+  "homepage": ".",
   "private": true,
   "version": "0.0.0",
   "type": "module",
